# rust-discord-bot-esgi

./: CODE_OF_CONDUCT.md  Cargo.toml  LICENSE  SECURITY.md  docker-compose.yml
.github/workflows/: deploy.yml
docker/: dockerfile
src/: main.rs
