[package]
name = "rust-discord-bot-esgi"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.66"
serenity = { version = "0.11.5", default-features = false, features = ["client", "gateway", "rustls_backend", "model"] }
tokio = "1.26.0"
tracing = "0.1.37"
reqwest = "0.11.22"
chrono = "0.4.31"
shuttle-runtime = "0.30.1"
shuttle-serenity = "0.30.1"
shuttle-secrets = "0.30.1"
base64 = "0.21.5"
serde = "1.0.189"
serde_json = "1.0.107"
